adicionando os pacotes vendidos

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@
   --bs-orange: #fd7e14;
   --bs-yellow: #e4c662;
   --bs-green: #67c29c;
-  --bs-teal: #64a19d;
+  --bs-teal: #ff9076;
   --bs-cyan: #1cabc4;
   --bs-white: #fff;
   --bs-gray: #6c757d;
@@ -39,7 +39,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #64a19d;
+  --bs-primary: #ff9076;
   --bs-secondary: #7464a1;
   --bs-success: #67c29c;
   --bs-info: #1cabc4;
@@ -246,7 +246,7 @@ sup {
 }
 
 a {
-  color: #64a19d;
+  color: #ff9076;
   text-decoration: underline;
 }
 a:hover {
@@ -2516,8 +2516,8 @@ textarea.form-control-lg {
   box-shadow: 0 0 0 0.25rem rgba(100, 161, 157, 0.25);
 }
 .form-check-input:checked {
-  background-color: #64a19d;
-  border-color: #64a19d;
+  background-color: #ff9076;
+  border-color: #ff9076;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
@@ -2526,8 +2526,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #64a19d;
-  border-color: #64a19d;
+  background-color: #ff9076;
+  border-color: #ff9076;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2604,7 +2604,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #64a19d;
+  background-color: #ff9076;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2633,7 +2633,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #64a19d;
+  background-color: #ff9076;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3041,8 +3041,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #64a19d;
-  border-color: #64a19d;
+  background-color: #ff9076;
+  border-color: #ff9076;
 }
 .btn-primary:hover {
   color: #fff;
@@ -3065,8 +3065,8 @@ textarea.form-control-lg {
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #fff;
-  background-color: #64a19d;
-  border-color: #64a19d;
+  background-color: #ff9076;
+  border-color: #ff9076;
 }
 
 .btn-secondary {
@@ -3340,27 +3340,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  color: #64a19d;
-  border-color: #64a19d;
+  color: #ff9076;
+  border-color: #ff9076;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #64a19d;
-  border-color: #64a19d;
+  background-color: #ff9076;
+  border-color: #ff9076;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
   box-shadow: 0 0 0 0.25rem rgba(100, 161, 157, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #fff;
-  background-color: #64a19d;
-  border-color: #64a19d;
+  background-color: #ff9076;
+  border-color: #ff9076;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
   box-shadow: 0 0 0 0.25rem rgba(100, 161, 157, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #64a19d;
+  color: #ff9076;
   background-color: transparent;
 }
 
@@ -3591,7 +3591,7 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #64a19d;
+  color: #ff9076;
   text-decoration: underline;
 }
 .btn-link:hover {
@@ -3900,7 +3900,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #64a19d;
+  background-color: #ff9076;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3941,7 +3941,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #64a19d;
+  background-color: #ff9076;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -4063,7 +4063,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #64a19d;
+  color: #ff9076;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -4120,7 +4120,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #64a19d;
+  background-color: #ff9076;
 }
 
 .nav-fill > .nav-link,
@@ -4924,7 +4924,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #64a19d;
+  color: #ff9076;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4955,8 +4955,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #64a19d;
-  border-color: #64a19d;
+  background-color: #ff9076;
+  border-color: #ff9076;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -5170,7 +5170,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #64a19d;
+  background-color: #ff9076;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5253,8 +5253,8 @@ textarea.form-control-lg {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #64a19d;
-  border-color: #64a19d;
+  background-color: #ff9076;
+  border-color: #ff9076;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -6600,7 +6600,7 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #64a19d;
+  color: #ff9076;
 }
 .link-primary:hover, .link-primary:focus {
   color: #50817e;
@@ -7067,7 +7067,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #64a19d !important;
+  border-color: #ff9076 !important;
 }
 
 .border-secondary {
@@ -11486,14 +11486,15 @@ body {
 #mainNav .navbar-toggler {
   font-size: 80%;
   padding: 0.75rem;
-  color: #64a19d;
-  border: 1px solid #64a19d;
+  color: #ff9076;
+  border: 1px solid #ff9076;
 }
+
 #mainNav .navbar-toggler:focus {
   outline: none;
 }
 #mainNav .navbar-brand {
-  color: #000;
+  color: #727070;
   font-weight: normal;
   padding: 0.9rem 0;
 }
@@ -11540,7 +11541,7 @@ body {
     color: #fff;
   }
   #mainNav.navbar-shrink {
-    background-color: #f9f6f4;
+    background-color: #fff;
   }
   #mainNav.navbar-shrink .navbar-brand {
     color: #727070;
@@ -11580,7 +11581,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgb(255 254 254 / 0%) 0%, rgb(255 255 255 / 0%) 10%, #f9f6f4 90%);
+  background: linear-gradient(to bottom, rgb(255 254 254 / 0%) 0%, rgb(255 255 255 / 0%) 10%, #fff 90%);
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11625,12 +11626,17 @@ body {
 .idvisual-section {
   padding-top: 1rem;
   /* background: linear-gradient(to bottom, #000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%); */
-  background-color: #f9f6f4;
+  background-color: #fff;
 }
 .idvisual-section p {
-  margin-bottom: 2rem;
-  font-size: 14px;
+  margin-bottom: 1rem;
 }
+
+.pacotes-section p {
+  margin-bottom: 1rem;
+}
+
+
 
 .pacotes-section {
   padding: 10rem 0;
@@ -11649,11 +11655,11 @@ body {
 @media (min-width: 992px) {
   .pacotes-section .featured-text {
     padding: 0 0 0 2rem;
-    border-left: 0.5rem solid #64a19d;
+    border-left: 0.5rem solid #ff9076;
   }
   .redes-section .featured-text {
     padding: 0 0 0 2rem;
-    border-left: 0.5rem solid #64a19d;
+    border-left: 0.5rem solid #ff9076;
   }
 }
 .pacotes-section .pacote-text {
@@ -11673,12 +11679,12 @@ body {
   }
 
   .pacotes-section .pacote-text hr {
-    border-color: #64a19d;
+    border-color: #ff9076;
     border-width: 0.25rem;
     width: 30%;
   }
   .redes-section .rede-text hr {
-    border-color: #64a19d;
+    border-color: #ff9076;
     border-width: 0.25rem;
     width: 30%;
   }
@@ -11708,7 +11714,7 @@ body {
 }
 .contact-section .card {
   border: 0;
-  border-bottom: 0.25rem solid #64a19d;
+  border-bottom: 0.25rem solid #ff9076;
 }
 .contact-section .card h4, .contact-section .card .h4 {
   font-size: 0.8rem;
@@ -11717,7 +11723,7 @@ body {
   letter-spacing: 0.15rem;
 }
 .contact-section .card hr {
-  border-color: #64a19d;
+  border-color: #ff9076;
   border-width: 0.25rem;
   width: 3rem;
 }
