--- a/css/styles2.css
+++ b/css/styles2.css
@@ -68,6 +68,9 @@
 .text-size-12{
     font-size: 12px;
 }
+.text-size-10{
+    font-size: 10px;
+}
 
 .destaque{
     font-weight: 700;
@@ -84,6 +87,9 @@
     border-width: 0.3em;
     border-color: #ff9f8a80;
     border-style: solid;
+}
+.social-icon{
+
 }
 
 .pacotes-section ul {
