--- a/css/styles2.css
+++ b/css/styles2.css
@@ -3,7 +3,6 @@
 .capaPortfolio{
     position: relative;
 }
-
 .imgEfeitoPortfolio{
     width: 100%;
     height: 100%;
@@ -11,7 +10,6 @@
     top: 0;
     left: 0;
 }
-
 .imgEfeitoPortfolio:hover{
     width: 100%;
     height: 100%;
@@ -51,6 +49,9 @@
 }
 .text-cinza-3{
     color: #a3a3a3;
+}
+.text-size-16{
+    font-size: 16px;
 }
 .text-size-14{
     font-size: 14px;
@@ -99,7 +100,6 @@
     background-color: #FFA08A;
 }
 
-
 @media (max-width: 576px) {
     #imgApresentacao {
         width: 80%;
@@ -112,19 +112,19 @@
 @media (min-width: 576px) {
    
     #imgApresentacao {
-        width: 70%;
+        width: 60%;
     }
 }
 @media (min-width: 768px) {
     #imgApresentacao {
-        width: 60%;
+        width: 50%;
     }
     
 }
 @media (min-width: 992px) {
     
     #imgApresentacao {
-        width: 40%;
+        width: 30%;
     }
     ::-webkit-scrollbar {
         width:10px;
@@ -138,8 +138,94 @@
 }
 @media (min-width: 1200px) {
     #imgApresentacao {
-        width: 30%;
+        width: 25%;
     }
 }
 @media (min-width: 1400px) {    
 }
+
+#mainNav {
+    min-height: 3.5rem;
+    background-color: #fff;
+  }
+  #mainNav .navbar-toggler {
+    font-size: 80%;
+    padding: 0.75rem;
+    color: #ff9076;
+    border: 1px solid #ff9076;
+  }
+  
+  #mainNav .navbar-toggler:focus {
+    outline: none;
+  }
+  #mainNav .navbar-brand {
+    color: #727070;
+    font-weight: normal;
+    padding: 0.9rem 0;
+  }
+  #mainNav .navbar-nav .nav-item:hover {
+    color: fade(#fff, 80%);
+    outline: none;
+    background-color: transparent;
+  }
+  #mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
+    outline: none;
+    background-color: transparent;
+  }
+  @media (min-width: 992px) {
+    #mainNav {
+      padding-top: 0;
+      padding-bottom: 0;
+      border-bottom: none;
+      background-color: transparent;
+      transition: background-color 0.3s ease-in-out;
+    }
+    #mainNav .navbar-brand {
+      padding: 0.5rem 0;
+      color: #ff9076;
+    }
+  
+    #mainNav .navbar-brand:hover {
+      color: rgb(255 255 255 / 90%);
+      /* color: #ff9076; */
+    }
+  
+    #mainNav.navbar-shrink .navbar-brand:hover {
+      color: #ff9076;
+    }
+  
+    #mainNav .nav-link {
+      transition: none;
+      padding: 2rem 1.5rem;
+      color: #ff9076;
+    }
+    #mainNav .nav-link:hover {
+      color: rgb(255 255 255 / 75%);
+    }
+    #mainNav .nav-link:active {
+      color: #fff;
+    }
+    #mainNav.navbar-shrink {
+      background-color: #fff;
+    }
+    #mainNav.navbar-shrink .navbar-brand {
+      color: #727070;
+    }
+    #mainNav.navbar-shrink .nav-link {
+      color: #727070;
+      padding: 1.5rem 1.5rem 1.25rem;
+      border-bottom: 0.25rem solid transparent;
+    }
+    #mainNav.navbar-shrink .nav-link:hover {
+      color: #ff9076;
+    }
+    #mainNav.navbar-shrink .nav-link:active {
+      color: #ff9076;
+    }
+    #mainNav.navbar-shrink .nav-link.active {
+      color: #ff9076;
+      outline: none;
+      border-bottom: 0.25rem solid #ff9076;
+    }
+  
+  }
